# pyaaf_old

./: CMakeLists.txt  README.txt  build.sh  generate.py  setup.py
axLib/: AAFEssenceFormats_fix.h  AxEssence.cpp  AxEssence.h  AxIterator.cpp  AxIterator.h  AxMetaDef.cpp  AxMetaDef.h  AxProperty.h
docs/: Makefile  conf.py  index.rst  make.bat  parse_aaf_header.py
docs/api/: AxAuxiliaryDescriptor.rst  AxBaseObj.rst  AxCommentMarker.rst  AxComponent.rst  AxCompositionMob.rst  AxConstantValue.rst  AxContentStorage.rst  AxControlPoint.rst  AxDataDef.rst  AxDefObject.rst  AxDictionary.rst  AxDigitalImageDescriptor.rst  AxEdgecode.rst  AxEssenceDescriptor.rst  AxEssenceFormat.rst  AxEssenceGroup.rst  AxEssenceMultiAccess.rst  AxEvent.rst  AxFile.rst  AxFileDescriptor.rst  AxFiller.rst  AxInit.rst  AxInterpolationDef.rst  AxLocator.rst  AxMasterMob.rst  AxMasterMobEx.rst  AxMetaDefinition.rst  AxMob.rst  AxMobSlot.rst  AxNestedScope.rst  AxObject.rst  (+33 more)
examples/: aaf2xml.py  axDump.py  comp_create.py  dump_avid_titles.py  essence_create.py  meta_create.py  qt_aafmodel.py  qt_mobview.py
include/: AAFDataBuffer.h  create_instance.h  get_property_value.cpp  get_property_value.h  query_interface.h  resolve_smartpointer.cpp  resolve_smartpointer.h  utilities.h
pyaaf/: __init__.py  docs.pkl  open.py  pct_parser.py  util.py
pyste_src/: AAFClassDefUIDs.pyste  AAFCodecDefs.pyste  AAFCompressionDefs.pyste  AAFContainerDefs.pyste  AAFDataBuffer.pyste  AAFDataDefs.pyste  AAFEssenceFormats.pyste  AAFExtEnum.pyste  AAFFileKinds.pyste  AAFInterpolatorDefs.pyste  AAFOPDefs.pyste  AAFOperationDefs.pyste  AAFParameterDefs.pyste  AAFPropertyDefs.pyste  AAFTypeDefUIDs.pyste  AAFTypes.pyste  AxBaseObj.pyste  AxBaseObjIter.pyste  AxComponent.pyste  AxContentStorage.pyste  AxCreateInstance.pyste  AxDataDef.pyste  AxDefObject.pyste  AxDictionary.pyste  AxEssence.pyste  AxFIle.pyste  AxHeader.pyste  AxInit.pyste  AxIterator.pyste  AxKLVData.pyste  AxMetaDef.pyste  AxMob.pyste  AxMobSlot.pyste  AxObject.pyste  AxParameter.pyste  AxProperty.pyste  AxPropertyValue.pyste  AxPropertyValueDump.pyste  AxQueryInterface.pyste  AxSmartPointer.pyste  (+12 more)
src/: _AAFClassDefUIDs.cpp  _AAFCodecDefs.cpp  _AAFCompressionDefs.cpp  _AAFContainerDefs.cpp  _AAFDataBuffer.cpp  _AAFDataDefs.cpp  _AAFEssenceFormats.cpp  _AAFExtEnum.cpp  _AAFFileKinds.cpp  _AAFInterpolatorDefs.cpp  _AAFOPDefs.cpp  _AAFOperationDefs.cpp  _AAFParameterDefs.cpp  _AAFPropertyDefs.cpp  _AAFTypeDefUIDs.cpp  _AAFTypes.cpp  _AxBaseObj.cpp  _AxBaseObjIter.cpp  _AxComponent.cpp  _AxContentStorage.cpp  _AxCreateInstance.cpp  _AxDataDef.cpp  _AxDefObject.cpp  _AxDictionary.cpp  _AxEssence.cpp  _AxFIle.cpp  _AxHeader.cpp  _AxInit.cpp  _AxIterator.cpp  _AxKLVData.cpp  _AxMetaDef.cpp  _AxMob.cpp  _AxMobSlot.cpp  _AxObject.cpp  _AxParameter.cpp  _AxProperty.cpp  _AxPropertyValue.cpp  _AxPropertyValueDump.cpp  _AxQueryInterface.cpp  _AxSmartPointer.cpp  (+7 more)
tests/: test_core.py
(+103 files in other folders)
